styling form. reducing form padding. Updating calendar's picker default icon to a custom one, due to contrast issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -340,15 +340,39 @@ button.secondary:hover {
     color: #3a3a3a;
 }
 
+form > h3 {
+
+    color: #fafafa;
+    margin-bottom: 1rem;
+    text-align: justify;
+
+}
+
+
+.contact-container {
+
+    display: flex;
+    justify-content: flex-start; 
+    padding: 0 1rem; 
+    max-width: 1200px; 
+    /* margin: 0 auto;  */
+   
+  
+    
+}
+
+
 .contact form {
-    max-width: 600px;
-    margin: 0 auto;
+    max-width: 500px;
     background-color: #000000a7;
-    padding: 2rem;
+    padding: 0.5rem;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 100%;
-    
+    margin-left: 0; /* Align form to the left */
+    flex:1;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 .form-group {
@@ -360,7 +384,7 @@ button.secondary:hover {
     display: block;
     margin-bottom: 0.5rem;
     color: #fafafa;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .form-group input,
@@ -372,6 +396,7 @@ button.secondary:hover {
     font-size: 1rem;
     background-color: transparent;
     color: #fafafa;
+    font-family: "Open Sans", sans-serif;
 }
 
 .required {
@@ -392,6 +417,15 @@ button.secondary:hover {
     
 }
 
+/* Hide the default calendar icon * and add a custom one. Reason is that the web browser calendar icon is set by default as black */
+input[type="date"]::-webkit-calendar-picker-indicator {
+
+    
+    z-index: 1;
+    background-image: url("../images/calendar-icon-free-vector.jpg");
+   
+
+}
 
 
 
